# Lidar

./: clear
demo/: CMakeLists.txt  demo.cpp
edge/: grid.py  tempCodeRunnerFile.py
include/: box.h  json_read.h  processPointClouds.hpp  render.h  render.hpp
pcd_joint/: CMakeLists.txt  registration_cloud.cpp
show_pcd/: CMakeLists.txt  show_pcd.cpp
src/: CMakeLists.txt  box.cpp  environment.cpp  render.cpp
test/: CMakeLists.txt  test.cpp
